   of the module that serialized the object and the version of the same module that
   is performing de-serialization
 - script to import manual qc values from the old warehouse RT#493757
 - update_outcome method of mqc entities renamed to update_nonfinal_outcome
 - a new update_outcome method allows for update of final outcomes
 - method to toggle stored final manual qc outcomes

release 59.3
 - transparent search query for autoqc objects irrespectively of the details of
   object's database implementation (in-table identifies or composition)
 - custom parent class for resultset objects
 - calling ->new() on resultset object to create a new result replaced with
   calling more intuitive ->new_result()
 - upgrade genotype check to use samtools1 and bcftools1
 - SeqQC
   - New dictionary table for plex level library MQC. (Issue 238)

release 59.2
 - library-level manual QC for individual plexes.

release 59.1
 - 'write2file' method of autoqc result objects removed since it duplicated
     the 'store' method
 - alternative base class npg_qc::autoqc::results::base for autoqc results objects,
     able to represent results that are derived from merged files and described by
     a composition of multiple components
 - autoqc result objects for samtools stats file, sam/bam headers and digests
     derived from the new base class
 - bam_flagstats result extension to produce samtools_stats and sequence_summary
     results (related objects) either at run time or later
 - database tables for storing component and composition objects
 - autoqc db loader extension
     - to load data represented by classes derived from the new base class
     - to build related objects in memory and to load them to the database
       bypassing serialization to a file - a way to save cram headers and stats
       file where the analysis pipeline did not run the current code that
       produces samtools_stats and sequence_summary objects as individual files